Closed Bug 1685364 Opened 4 years ago Closed 4 years ago

PDMFactory.cpp:681:7: error: use of undeclared identifier 'AOMDecoder', when building with --disable-av1

Categories

(Core :: Audio/Video, defect)

defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox84 --- unaffected
firefox85 --- unaffected
firefox86 --- fixed

People

(Reporter: dholbert, Assigned: dholbert)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Building with this in my mozconfig, on mac...

ac_add_options --enable-debug --enable-optimize
ac_add_options --disable-av1

...I get this build error:

dom/media/platforms/PDMFactory.cpp:681:7: error: use of undeclared identifier 'AOMDecoder'
 0:09.52   if (AOMDecoder::IsAV1(aMimeType)) {
 0:09.52       ^

This seems to be pointing to a line that was added in bug 1681043.

(I have --disable-av1 in my mozconfig because it was required at some point recently in order to work around some other build error.)

This probably needs to be wrapped in #ifdef MOZ_AV1, I'm guessing.

Version: 76 Branch → Trunk
Assignee: nobody → dholbert
Status: NEW → ASSIGNED

Isee the same on Solaris.

Pushed by dholbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/9e416d9b99a9 Add ifdef guard around some AV1-specific code, to fix --disable-av1 build bustage. r=alwu
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch

Set release status flags based on info from the regressing bug 1681043

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: