Bug 1685364: Add ifdef guard around some AV1-specific code, to fix --disable-av1 build bustage. r=alwu

Differential Revision: https://phabricator.services.mozilla.com/D100949